fix: dark mode for graph visualisation

--- a/packages/gatsby-theme-kb/src/components/GraphView/graph-view.css
+++ b/packages/gatsby-theme-kb/src/components/GraphView/graph-view.css
@@ -53,6 +53,10 @@
   font-size: 1.5em;
 }
 
+.force-graph-container canvas {
+  background-color: var(--bg-color-1) !important;
+}
+
 .modal-close,
 .modal-scale {
   position: absolute;
